--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   },
   "scripts": {
     "start": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\""
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2"
   }
 }
